--- a/projects.html
+++ b/projects.html
@@ -12,10 +12,10 @@
     <title>Projects: Brian Do</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="navbar-fixed-top.css" rel="stylesheet">
+    <!-- <link href="navbar-fixed-top.css" rel="stylesheet"> -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -26,36 +26,36 @@
 
   <body>
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Brian Do</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research Interests</a></li>
-            <li><a href="publications.html">Publications</a></li>
-            <li class="active"><a href="#">Projects</a></li>
-            <li><a href="/blog">Blog</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+    <nav class="navbar fixed-top navbar-expand flex-md-row navbar-light bg-light">
+      <a class="navbar-brand" href="index.html">Brian Do</a>    
+      <span class="navbar-brand"> | </span>
+      <div class="navbar-nav bd-navbar-nav flex-row">
+          <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="publications.html">Publications</a>
+          <a class="nav-item nav-link active" href="#">Projects</a>
+          <a class="nav-item nav-link" href="/blog">Blog</a>
       </div>
     </nav>
+
+    <br>
+    <br>
+    <br>
+    <br>
+
   <div class="container panel">
-    <h1>Projects</h1>
-    See my code on <a href="http://github.com/bdo311">GitHub</a>. I code primarily in Python and R, and I have proficiency in C, C++, and Julia. 
+    <h1 class="display-3">Projects</h1>
+    <p class="lead">
+    See my code on <a href="http://github.com/bdo311">GitHub</a>. I code primarily in Python and R, and I have proficiency in C, C++, and Julia.
+    </p>
+    <br>
+    <br>
   </div>
 
   <div class="container panel">
     <h3>Biology</h3>
       I have built or contributed to several projects that have dramatically sped up my computational biology workflow.
+      <br>
+      <br>
   </div>
    <div class="container">
       <div class="row">
@@ -85,8 +85,11 @@
       </div>
     </div>
 
+    <br><br>
   <div class="container panel">
+
     <h3>Data explorations</h3>
+    <br>
   </div>
    <div class="container">
       <div class="row">
@@ -98,19 +101,25 @@
           We implemented convolutional neural networks to automatically tag and caption 1 million images scanned from 15th through 19th century books in the British Library 1M collection. Our work won the <a href="http://labs.bl.uk/British+Library+Labs+Competition">2016 British Library Labs Competition</a>. Check out our web portal <a href="http://bit.ly/sherlocknet">here</a>.
         </div>
       </div>
+      <br>
+      <div class="row">
+        <div class="col-md-3" align="center">
+          <td><img width="198" src="pictures/gfp.png"></td>
+        </div>
+        <div class="col-md-9 panel">
+          <h4><a href="https://github.com/bdo311/mcprotein">Pairwise epistasis</a></h4>
+          How multiple mutations affect protein folding and fitness, a phenomenon known as epistasis, is still not well understood. We used simulations, experimental data, and evolutionary findings to study the role of pairwise interactions in epistasis. Our writeup is <a href="https://docs.google.com/document/d/1rrgbwwGd_RcN3mrl22ffZuFuO6_dpt0TogHK1RmoXjc/edit?usp=sharing">here</a>.
+        </div>
+      </div>
     </div>
 
     <br>
     <br>
 
- 
     <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
-</html>
