--- a/publications.html
+++ b/publications.html
@@ -12,10 +12,10 @@
     <title>Publications: Brian Do</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
 
     <!-- Custom styles for this template -->
-    <link href="navbar-fixed-top.css" rel="stylesheet">
+    <!-- <link href="navbar-fixed-top.css" rel="stylesheet"> -->
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -26,32 +26,27 @@
 
   <body>
     <!-- Fixed navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="index.html">Brian Do</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="research.html">Research Interests</a></li>
-            <li class="active"><a href="#">Publications</a></li>
-            <li><a href="software.html">Projects</a></li>
-            <li><a href="/blog">Blog</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
+    <nav class="navbar fixed-top navbar-expand flex-md-row navbar-light bg-light">
+      <a class="navbar-brand" href="index.html">Brian Do</a>
+      <span class="navbar-brand"> | </span>
+      <div class="navbar-nav bd-navbar-nav flex-row">
+          <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link active" href="#">Publications</a>
+          <a class="nav-item nav-link" href="projects.html">Projects</a>
+          <a class="nav-item nav-link" href="/blog">Blog</a>
       </div>
     </nav>
+
+    <br>
+    <br>
+    <br>
+    <br>
     
   <div class="container panel">
-    <h1>Publications</h1>
+    <h1 class="display-3">Publications</h1>
+    <br>
     <h3>Grad school</h3>
+    <br>
   </div>
    <div class="container">
       <div class="row">
@@ -59,17 +54,18 @@
           <td><img width="198" src="./pictures/deeplearning.png"></td>
         </div>
         <div class="col-md-9 panel">
-          <h4><a href=http://rsif.royalsocietypublishing.org/content/15/141/20170387>Opportunities and obstacles for deep learning in biology and medicine.</a> </h4>
-          <h5>Ching T, Himmelstein DS, Beaulieu-Jones BK, Kalinin AA, <b>Do BT</b>, Way GP, Ferrero E, Agapow P-M, Xie W, Rosen GL, Lengerich BJ, Israeli J, Lanchantin J, Woloszynek S, Carpenter AE, Shrikumar A, Xu J, Cofer EM, Harris DJ, DeCaprio D, Qi Y, Kundaje A, Peng Y, Wiley LK, Segler MHS, Gitter A, Greene CS. </h5>
+          <h5><a href=http://rsif.royalsocietypublishing.org/content/15/141/20170387>Opportunities and obstacles for deep learning in biology and medicine.</a> </h5>
+          Ching T, Himmelstein DS, Beaulieu-Jones BK, Kalinin AA, <b>Do BT</b>, Way GP, Ferrero E, Agapow P-M, Xie W, Rosen GL, Lengerich BJ, Israeli J, Lanchantin J, Woloszynek S, Carpenter AE, Shrikumar A, Xu J, Cofer EM, Harris DJ, DeCaprio D, Qi Y, Kundaje A, Peng Y, Wiley LK, Segler MHS, Gitter A, Greene CS. <br>
           Journal of the Royal Society Interface (2018)
-          <br><br>
+          <br>
           - Most viewed bioRxiv preprint of spring 2017 (<a href=https://www.nature.com/articles/d41586-017-08493-x>link</a>)
         </div>
       </div>
     </div>
-
+<br> <br>
   <div class="container panel">
     <h3>Undergrad</h3>
+    <br>
   </div>
    <div class="container">
       <div class="row">
@@ -77,8 +73,8 @@
           <td><img width="198" src="./pictures/ddx3.png"></td>
         </div>
         <div class="col-md-9 panel">
-          <h4><a href=http://www.impactjournals.com/oncotarget/index.php?journal=oncotarget&page=article&op=view&path[]=8612&pubmed-linkout=1>Medulloblastoma-associated DDX3 variant selectively alters the translational response to stress.</a> </h4>
-          <h5>Oh S, Flynn RA, Floor SN, Purzner J, Martin L, <b>Do BT</b>, Schubert S, Vaka D, Adams CM, Leib RD, Doudna JA, Chang HY, Cho YJ. </h5>
+          <h5><a href=http://www.impactjournals.com/oncotarget/index.php?journal=oncotarget&page=article&op=view&path[]=8612&pubmed-linkout=1>Medulloblastoma-associated DDX3 variant selectively alters the translational response to stress.</a> </h5>
+          Oh S, Flynn RA, Floor SN, Purzner J, Martin L, <b>Do BT</b>, Schubert S, Vaka D, Adams CM, Leib RD, Doudna JA, Chang HY, Cho YJ. <br>
           Oncotarget (2016)
         </div>
       </div>
@@ -89,8 +85,8 @@
           <td><img width="198" src="./pictures/fasticlip.png"></td>
         </div>
         <div class="col-md-9 panel">
-          <h4><a href=http://www.nature.com/nmeth/journal/vaop/ncurrent/full/nmeth.3840.html>Ultraefficient irCLIP pipeline for characterization for protein-RNA interactions.</a> </h4>
-          <h5>Zarnegar B, Flynn RA, Shen Y, <b>Do BT</b>, Chang HY, Khavari PA.</h5>
+          <h5><a href=http://www.nature.com/nmeth/journal/vaop/ncurrent/full/nmeth.3840.html>Ultraefficient irCLIP pipeline for characterization for protein-RNA interactions.</a> </h5>
+          Zarnegar B, Flynn RA, Shen Y, <b>Do BT</b>, Chang HY, Khavari PA.<br>
           Nature Methods (2016)
         </div>
       </div>
@@ -101,8 +97,8 @@
           <td><img width="198" src="./pictures/hexim.png"></td>
         </div>
         <div class="col-md-9 panel">
-          <h4><a href=http://www.ncbi.nlm.nih.gov/pubmed/27058786>Stress from nucleotide depletion activates the transcriptional regulator HEXIM1 to suppress melanoma.</a> </h4>
-          <h5>Tan JL, Fogley RD, Flynn RA, Ablain J, Yang S, Saint-Andre V, Fan ZP, <b>Do BT</b>, …, Chang HY, Young RA, Zon LI. </h5>
+          <h5><a href=http://www.ncbi.nlm.nih.gov/pubmed/27058786>Stress from nucleotide depletion activates the transcriptional regulator HEXIM1 to suppress melanoma.</a> </h5>
+          Tan JL, Fogley RD, Flynn RA, Ablain J, Yang S, Saint-Andre V, Fan ZP, <b>Do BT</b>, …, Chang HY, Young RA, Zon LI. <br>
           Molecular Cell (2016)
         </div>
       </div>
@@ -113,8 +109,8 @@
           <td><img width="198" src="./pictures/7sk.png"></td>
         </div>
         <div class="col-md-9 panel">
-          <h4><a href=http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.3176.html>7SK-BAF axis controls pervasive transcription at enhancers.</a> </h4>
-          <h5>Flynn RA, <b>Do BT</b>, Rubin A, Calo E, Lee B, Rale M, Kuchelmeister H, Rale M, Chu C, Kool ET, Wysocka J, Khavari PA, Chang HY.</h5>
+          <h5><a href=http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.3176.html>7SK-BAF axis controls pervasive transcription at enhancers.</a> </h5>
+          Flynn RA, <b>Do BT</b>, Rubin A, Calo E, Lee B, Rale M, Kuchelmeister H, Rale M, Chu C, Kool ET, Wysocka J, Khavari PA, Chang HY.<br>
           Nature Structural and Molecular Biology (2016)
         </div>
       </div>
@@ -125,8 +121,8 @@
           <td><img width="198" src="./pictures/fasticlip_paper.png"></td>
         </div>
         <div class="col-md-9 panel">
-          <h4><a href=http://rnajournal.cshlp.org/content/early/2014/11/19/rna.047803.114?top=1>Dissecting non-coding and pathogen RNA-protein interactomes.</a></h4>
-          <h5>Flynn RA, Martin L, Spitale RC, <b>Do BT</b>, Sagan SM, Zarnegar B, Qu K, Khavari PA, Quake SR, Sarnow P, Chang HY.</h5>
+          <h5><a href=http://rnajournal.cshlp.org/content/early/2014/11/19/rna.047803.114?top=1>Dissecting non-coding and pathogen RNA-protein interactomes.</a></h5>
+          Flynn RA, Martin L, Spitale RC, <b>Do BT</b>, Sagan SM, Zarnegar B, Qu K, Khavari PA, Quake SR, Sarnow P, Chang HY.<br>
           RNA (2015)
         </div>
       </div>
@@ -137,18 +133,13 @@
           <td><img width="198" src="./pictures/dicer.png"></td>
         </div>
         <div class="col-md-9 panel">
-          <h4><a href="http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.2842.html">Dicer-microRNA-Myc circuit promotes transcription of hundreds of long noncoding RNAs.</a></h4>
-          <h5>Zheng GXY, <b>Do BT</b>, Webster DE, Khavari PA, Chang HY.</h5>
+          <h5><a href="http://www.nature.com/nsmb/journal/vaop/ncurrent/full/nsmb.2842.html">Dicer-microRNA-Myc circuit promotes transcription of hundreds of long noncoding RNAs.</a></h5>
+          Zheng GXY, <b>Do BT</b>, Webster DE, Khavari PA, Chang HY.<br>
           Nature Structural and Molecular Biology (2014)
         </div>
       </div>      
     </div>
 
-  <br><br>
-
-  <div class="container panel">
-    I also keep a running list of papers I've read on <a href="http://www.citeulike.org/user/bdo311/order/posted,,">CiteULike</a>.
-  </div>
 
   <br><br>
 
@@ -156,11 +147,8 @@
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
-</html>
