--- a/research.html
+++ b/research.html
@@ -32,7 +32,7 @@
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="/index.html">Brian Do</a>
@@ -42,7 +42,7 @@
             <li><a href="/index.html">Home</a></li>
             <li class="active"><a href="#">Research Interests</a></li>
             <li><a href="/publications.html">Publications</a></li>
-            <li><a href="/software.html">Projects</a></li>
+            <li><a href="/projects.html">Projects</a></li>
             <li><a href="/blog">Blog</a></li>
           </ul>
         </div><!--/.nav-collapse -->
