--- a/publications.html
+++ b/publications.html
@@ -44,6 +44,7 @@
     
   <div class="container panel">
     <h1 class="display-3">Publications</h1>
+    <p class="lead">My Google Scholar page can be found <a href=https://scholar.google.com/citations?user=rq50cgQAAAAJ&hl=en>here</a>.</p>
     <br>
     <h3>Grad school</h3>
     <br>
