--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
   </head>
 
   <body>
-    <!-- Fixed navbar -->
-    <nav class="navbar fixed-top navbar-expand flex-md-row navbar-light bg-light">
-      <a class="navbar-brand" href="#">Brian Do</a>      
-      <span class="navbar-brand"> | </span>
-      <div class="navbar-nav bd-navbar-nav flex-row">
+    <nav class="navbar navbar-expand fixed-top flex-column flex-md-row bd-navbar navbar-light bg-light">
+      <a class="navbar-brand mr-0 mr-md-2" href="#">Brian Do</a>  
+      <div class="navbar-nav navbar-collapse bd-navbar-nav flex-row">
         <a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
         <a class="nav-item nav-link" href="publications.html">Publications</a>
         <a class="nav-item nav-link" href="projects.html">Projects</a>
@@ -37,6 +35,7 @@
       </div>
     </nav>
 
+    <br>
     <br>
     <br>
     <br>
@@ -51,8 +50,8 @@
         </div>
         <div class="col-md-8 panel">
         <p class="lead">
-          Hi! I'm a third-year MD-PhD student in the <a href="https://www.hms.harvard.edu/md_phd/">Medical Scientist Training Program</a> at Harvard Medical School and MIT. My PhD is in the <a href=https://hst.mit.edu/academics/memp>Medical Engineering and Medical Physics</a> program at MIT.</p>
-          I completed my undergradute degree at Stanford University in biology and computer science. I was advised by <a href="http://changlab.stanford.edu">Dr. Howard Chang</a>, where I studied noncoding RNAs and their structure, interactions, and function. We discovered how these RNAs orchestrate gene regulation, cell fate, and many other processes through noncanonical functions. Previously, I worked with <a href="http://urogene.org">Dr. Long-Cheng Li</a> at UCSF on small RNA-mediated gene activation in the worm C. elegans. <br><br>
+          Hi! I'm a third-year MD-PhD student in the <a href="https://www.hms.harvard.edu/md_phd/">Medical Scientist Training Program</a> at Harvard Medical School and MIT. I am a graduate student in <a href="http://vanderheiden.scripts.mit.edu/main.php">Matthew Vander Heiden</a>'s lab at MIT, where I am part of the <a href=https://hst.mit.edu/academics/memp>Medical Engineering and Medical Physics</a> program.</p>
+          I completed my undergradute degree at Stanford University in biology and computer science. I was advised by <a href="http://changlab.stanford.edu">Howard Chang</a>, where I studied noncoding RNAs and their structure, interactions, and function. We discovered how these RNAs orchestrate gene regulation, cell fate, and many other processes through noncanonical functions. Previously, I worked with <a href="http://urogene.org">Long-Cheng Li</a> at UCSF on small RNA-mediated gene activation in the worm C. elegans. <br><br>
           I'm also excited by the role of technology in healthcare and other industries. During summer 2015, I interned at <a href="http://www.flatiron.com">Flatiron Health</a> as a Data Insights Engineer, where I helped build analytics tools on top of a million-patient clinicogenomic database that will be used for drug discovery and personalized medicine. <br><br>
           In my free time I love running, sailing, biking, and baking. I follow college football pretty avidly and enjoy learning new skills, whether it's a new instrument, programming language, or sport. Finally, I love tacos. Contact me if you know of a great taco place. <br><br>
           Email me at briando at mit dot edu or brian_do at hms dot harvard dot edu.
