--- a/projects.html
+++ b/projects.html
@@ -26,10 +26,9 @@
 
   <body>
     <!-- Fixed navbar -->
-    <nav class="navbar fixed-top navbar-expand flex-md-row navbar-light bg-light">
-      <a class="navbar-brand" href="index.html">Brian Do</a>    
-      <span class="navbar-brand"> | </span>
-      <div class="navbar-nav bd-navbar-nav flex-row">
+    <nav class="navbar navbar-expand fixed-top flex-column flex-md-row bd-navbar navbar-light bg-light">
+      <a class="navbar-brand mr-0 mr-md-2" href="#">Brian Do</a>  
+      <div class="navbar-nav navbar-collapse bd-navbar-nav flex-row">
           <a class="nav-item nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="publications.html">Publications</a>
           <a class="nav-item nav-link active" href="#">Projects</a>
@@ -37,6 +36,7 @@
       </div>
     </nav>
 
+    <br>
     <br>
     <br>
     <br>
