--- a/publications.html
+++ b/publications.html
@@ -71,6 +71,18 @@
    <div class="container">
       <div class="row">
         <div class="col-md-3" align="center">
+          <td><img width="198" src="./pictures/nr2f1.png"></td>
+        </div>
+        <div class="col-md-9 panel">
+          <h5><a href=https://elifesciences.org/articles/41770>The novel lncRNA lnc-NR2F1 is pro-neurogenic and mutated in human neurodevelopmental disorders</a> </h5>
+          Ang CE, Wapinski OL, Ma Q, Fan S, Flynn RA, Coe B, Onoguchi M, Olmos VH, <b>Do BT</b>, Dukes-Rimsky L, Xu J, Lee QY, Tanabe K, Wang L, Elling U, Penninger J, Qu K, Eichler EE, Srivastava A, Chang HY, Wernig M.  <br>
+          eLife (2019)
+        </div>
+      </div>
+      <br>
+
+      <div class="row">
+        <div class="col-md-3" align="center">
           <td><img width="198" src="./pictures/ddx3.png"></td>
         </div>
         <div class="col-md-9 panel">
