--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3" align="center">
-          <td><img width="198" src="./pictures/brian.PNG"></td>
+          <td><img width="198" src="./pictures/brian.jpg"></td>
         </div>
         <div class="col-md-1 panel">
         </div>
