--- a/publications.html
+++ b/publications.html
@@ -51,23 +51,25 @@
   </div>
 
    <div class="container">
+
+
+      <div class="row">
+        <div class="col-md-3" align="center">
+        </div>
+        <div class="col-md-9 panel">
+          <h5><a href=https://pubmed.ncbi.nlm.nih.gov/33382985/>Increased demand for NAD+ related to ATP drives aerobic glycolysis.</a> </h5>
+          Luengo A, Li Z, Gui DY, Sullivan LB, Zagorulya M, <b>Do BT</b>, Ferreira R, Naamati A, Ali A, Lewis CA, Thomas CJ, Spranger S, Matheson NJ, Vander Heiden MG. <br>
+          Molecular Cell (2021)
+          </div>
+      </div>
+      <br>
+      
       <div class="row">
         <div class="col-md-3" align="center">
         </div>
         <div class="col-md-9 panel">
           <h5><a href=https://www.biorxiv.org/content/10.1101/2020.08.10.238428v1>Cell Programmed Nutrient Partitioning in the Tumor Microenvironment.</a> </h5>
           Reinfeld BI, Madden MZ, Wolf MM, Chytil A, Bader JE, Patterson AR, Cohen AS, Ali A, <b>Do BT</b>, Muir A, Lewis CA, Hongo RA, Young KL, Brown RE, Todd VM, Huffstater T, Abraham A, O’Neil RT, Wilson MH, Xin F, Tantawy MN, Merryman WD, Johnson RW, Williams CS, Mason EF, Mason FM, Beckermann KE, Vander Heiden MG, Manning HC, Rathmell JC, Rathmell WK.  <br>
-          bioRxiv (2020)
-          </div>
-      </div>
-      <br>
-
-      <div class="row">
-        <div class="col-md-3" align="center">
-        </div>
-        <div class="col-md-9 panel">
-          <h5><a href=https://www.biorxiv.org/content/10.1101/2020.06.08.140558v1>Increased demand for NAD+ related to ATP drives aerobic glycolysis.</a> </h5>
-          Luengo A, Li Z, Gui DY, Sullivan LB, Zagorulya M, <b>Do BT</b>, Ferreira R, Naamati A, Ali A, Lewis CA, Thomas CJ, Spranger S, Matheson NJ, Vander Heiden MG. <br>
           bioRxiv (2020)
           </div>
       </div>
