--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
         </div>
         <div class="col-md-8 panel">
         <p class="lead">
-          Hi! I'm a fifth-year MD-PhD student in the <a href="https://www.hms.harvard.edu/md_phd/">Medical Scientist Training Program</a> at Harvard Medical School and MIT. I am a graduate student in <a href="http://vanderheiden.scripts.mit.edu/main.php">Matthew Vander Heiden</a>'s lab at MIT, where I am part of the <a href=https://hst.mit.edu/academics/memp>Medical Engineering and Medical Physics</a> program. My interests lie at the intersection of metabolism, gene regulation, and cellular decision making.</p> 
+          Hi! I'm an MD-PhD student in the <a href="https://www.hms.harvard.edu/md_phd/">Medical Scientist Training Program</a> at Harvard Medical School and MIT. I recently obtained my PhD in <a href=https://hst.mit.edu/academics/memp>Medical Engineering and Medical Physics</a> from the Massachusetts Institute of Technology under the supervision of <a href="http://vanderheiden.scripts.mit.edu/main.php">Matthew Vander Heiden</a>. There, I used small molecule and genetic approaches to understand how metabolism and DNA replication fidelity affect cell fate decisions in the hematopoietic system.</p> 
           I completed my undergradute degree at Stanford University in biology and computer science. I was advised by <a href="http://changlab.stanford.edu">Howard Chang</a>, where I studied noncoding RNAs and their structure, interactions, and function. We discovered how these RNAs orchestrate gene regulation, cell fate, and many other processes through noncanonical functions. Previously, I worked with <a href="http://urogene.org">Long-Cheng Li</a> at UCSF on small RNA-mediated gene activation in the worm C. elegans. <br><br>
           I'm also excited by the role of technology in healthcare and other industries. During summer 2015, I interned at <a href="http://www.flatiron.com">Flatiron Health</a> as a Data Insights Engineer, where I helped build analytics tools on top of a million-patient clinicogenomic database that will be used for drug discovery and personalized medicine. <br><br>
           In my free time I love running, sailing, biking, and baking. I follow college football pretty avidly and enjoy learning new skills, whether it's a new instrument, programming language, or sport. Finally, I love tacos. Contact me if you know of a great taco place. <br><br>
-          Email me at briando at mit dot edu or brian_do at hms dot harvard dot edu.
+          Email me at brian_do at hms dot harvard dot edu.
           
         </div>
       </div>
