--- a/publications.html
+++ b/publications.html
@@ -52,28 +52,62 @@
 
    <div class="container">
 
+      <div class="row"> <div class="col-md-3" align="center"> 
+        <td><img width="198" src="./pictures/nutrient.png"></td>
+      </div> <div class="col-md-9 panel"> <h5><a href="https://pubmed.ncbi.nlm.nih.gov/39484531/">Site of breast cancer metastasis is independent of single nutrient levels.</a></h5> Abbott KL, Subudhi S, Ferreira R, Gültekin Y, Steinbuch SC, Munim MB, Honeder SE, Kumar AS, Ramesh DL, Wu M, Hansen JA, Sivanand S, Riedmayr LM, Duquette M, Ali A, Henning N, Shevzov-Zebrun A, Gourgue F, Barbeau AM, Waite M, Kunchok T, Ferraro GB, <b>Do BT</b>, Spanoudaki V, Sánchez-Rivera FJ, Jin X, Church GM, Jain RK, Vander Heiden MG.<br>
+      bioRxiv (2024) </div> </div> <br>
 
-      <div class="row">
-        <div class="col-md-3" align="center">
-        </div>
-        <div class="col-md-9 panel">
-          <h5><a href=https://pubmed.ncbi.nlm.nih.gov/33382985/>Increased demand for NAD+ related to ATP drives aerobic glycolysis.</a> </h5>
-          Luengo A, Li Z, Gui DY, Sullivan LB, Zagorulya M, <b>Do BT</b>, Ferreira R, Naamati A, Ali A, Lewis CA, Thomas CJ, Spranger S, Matheson NJ, Vander Heiden MG. <br>
-          Molecular Cell (2021)
-          </div>
-      </div>
+      <div class="row"> <div class="col-md-3" align="center"> 
+        <td><img width="198" src="./pictures/mets.png"></td>
+      </div> <div class="col-md-9 panel"> <h5><a href="https://pubmed.ncbi.nlm.nih.gov/39160333/">Cancer tissue of origin constrains the growth and metabolism of metastases.</a></h5> Sivanand S, Gultekin Y, Winter PS, Vermeulen SY, Tchourine KM, Abbott KL, Danai LV, Gourgue F, <b>Do BT</b>, Crowder K, Kunchok T, Lau AN, Darnell AM, Jefferson A, Morita S, Duda DG, Aguirre AJ, Wolpin BM, Henning N, Spanoudaki V, Maiorino L, Irvine DJ, Yilmaz OH, Lewis CA, Vitkup D, Shalek AK, Vander Heiden MG. <br>
+      Nature Metabolism (2024) </div> </div> <br>
+
+      <div class="row"> <div class="col-md-3" align="center"> 
+        <td><img width="198" src="./pictures/diff.jpg"></td>
+      </div> <div class="col-md-9 panel"> <h5><a href="https://pubmed.ncbi.nlm.nih.gov/38823395/">Nucleotide depletion promotes cell fate transitions by inducing DNA replication stress.</a></h5> <b>Do BT*</b>, Hsu PP*, Vermeulen SY, Wang Z, Hirz T, Abbott KL, Aziz N, Replogle JM, Bjelosevic S, Paolino J, Nelson SA, Block S, Darnell AM, Ferreira R, Zhang H, Milosevic J, Schmidt DR, Chidley C, Harris IS, Weissman JS, Pikman Y, Stegmaier K, Cheloufi S, Su XA, Sykes DB, Vander Heiden MG. <br>
+      Developmental Cell (2024) </div> </div> <br>
+
+      <div class="row"> <div class="col-md-3" align="center"> 
+        <td><img width="198" src="./pictures/media.jpg"></td>
+      </div> <div class="col-md-9 panel"> <h5><a href="https://pubmed.ncbi.nlm.nih.gov/37689063/">Screening in serum-derived medium reveals differential response to compounds targeting metabolism.</a></h5> Abbott KL, Ali A, Casalena D, <b>Do BT</b>, Ferreira R, Cheah JH, Soule CK, Deik A, Kunchok T, Schmidt DR, Renner S, Honeder SE, Wu M, Chan SH, Tseyang T, Stoltzfus AT, Michel SLJ, Greaves D, Hsu PP, Ng CW, Zhang CJ, Farsidjani A, Kent JR, Madariaga MLL, Gramatikov IMT, Matheson NJ, Lewis CA, Clish CB, Rees MG, Roth JA, Griner LM, Muir A, Auld DS, Vander Heiden MG. <br>
+      Cell Chemical Biology (2023) </div> </div> <br>
+
+      <div class="row"> <div class="col-md-3" align="center"> 
+        <td><img width="198" src="./pictures/rad21.png"></td>
+      </div> <div class="col-md-9 panel"> <h5><a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4255225">RAD21 Promotes Repair of EWS-FLI1-Induced Replication Associated Damage.</a></h5> Wang RW, Ma D, <b>Do BT</b>, Panday A, Hu S, Lu K, Vander Heiden MG, Scully R, Lees J, Amon A, Su XA.
       <br>
-      
-      <div class="row">
-        <div class="col-md-3" align="center">
-        </div>
-        <div class="col-md-9 panel">
-          <h5><a href=https://www.biorxiv.org/content/10.1101/2020.08.10.238428v1>Cell Programmed Nutrient Partitioning in the Tumor Microenvironment.</a> </h5>
-          Reinfeld BI, Madden MZ, Wolf MM, Chytil A, Bader JE, Patterson AR, Cohen AS, Ali A, <b>Do BT</b>, Muir A, Lewis CA, Hongo RA, Young KL, Brown RE, Todd VM, Huffstater T, Abraham A, O’Neil RT, Wilson MH, Xin F, Tantawy MN, Merryman WD, Johnson RW, Williams CS, Mason EF, Mason FM, Beckermann KE, Vander Heiden MG, Manning HC, Rathmell JC, Rathmell WK.  <br>
-          bioRxiv (2020)
-          </div>
+      SSRN (2022) </div> </div> <br>
+
+      <div class="row"> <div class="col-md-3" align="center">
+        <td><img width="198" src="./pictures/got2.png"></td>
+      </div> <div class="col-md-9 panel"><h5><a href="https://pubmed.ncbi.nlm.nih.gov/36153305/">GOT2 consider the tumor microenvironment.</a></h5> <b>Do BT</b>, Vander Heiden MG. <br>
+      Trends in Cancer (2022) </div> </div> <br>
+
+      <div class="row"> <div class="col-md-3" align="center"> 
+        <td><img width="198" src="./pictures/imbalance.png"></td>
+      </div> <div class="col-md-9 panel"> <h5><a href="https://pubmed.ncbi.nlm.nih.gov/35927450/">Nucleotide imbalance decouples cell growth from cell proliferation.</a></h5> Diehl FF, Miettinen TP, Elbashir R, Nabel CS, Darnell AM, <b>Do BT</b>, Manalis SR, Lewis CA, Vander Heiden MG.  <br>
+      Nature Cell Biology (2022) </div> </div> <br>
+
+      <div class="row"> <div class="col-md-3" align="center"> 
+        <td><img width="198" src="./pictures/caf1.png"></td>
+      </div> <div class="col-md-9 panel"> <h5><a href="https://pubmed.ncbi.nlm.nih.gov/35487911/">Regulation of chromatin accessibility by the histone chaperone CAF-1 sustains lineage fidelity.</a></h5> Franklin R, Guo Y, He S, Chen M, Ji F, Zhou X, Frankhouser D, <b>Do BT</b>, Chiem C, Jang M, Blanco MA, Vander Heiden MG, Rockne RC, Ninova M, Sykes DB, Hochedlinger K, Lu R, Sadreyev RI, Murn J, Volk A, Cheloufi S.  <br>
+      Nature Communications (2022) </div> </div> <br>
+
+      <div class="row"> <div class="col-md-3" align="center">
+        <td><img width="198" src="./pictures/nad.png"></td>
+      </div> <div class="col-md-9 panel"><h5><a href="https://pubmed.ncbi.nlm.nih.gov/33382985/">Increased demand for NAD+ relative to ATP drives aerobic glycolysis.</a></h5> Luengo A, Li Z, Gui DY, Sullivan LB, Zagorulya M, <b>Do BT</b>, Ferreira R, Naamati A, Ali A, Lewis CA, Thomas CJ, Spranger S, Matheson NJ, Vander Heiden MG.  <br>
+      Molecular Cell (2021) </div> </div> <br>
+
+      <div class="row"> <div class="col-md-3" align="center">
+        <td><img width="198" src="./pictures/hepcidin.png"></td>
+      </div> <div class="col-md-9 panel"> <h5><a href="https://pubmed.ncbi.nlm.nih.gov/34155415/">Hepcidin sequesters iron to sustain nucleotide metabolism and mitochondrial function in colorectal cancer epithelial cells.</a></h5> Schwartz AJ, Goyert JW, Solanki S, Kerk SA, Chen B, Castillo C, Hsu PP, <b>Do BT</b>, Singhal R, Dame MK, Lee HJ, Spence JR, Lakhal-Littleton S, Vander Heiden MG, Lyssiotis CA, Xue X, Shah YM.  <br>
+      Nature Metabolism (2021) </div> </div> <br>
+
+      <div class="row"> <div class="col-md-3" align="center">
+        <td><img width="198" src="./pictures/partitioning.png"></td>
       </div>
-      <br>
+      <div class="col-md-9 panel"> <h5><a href="https://pubmed.ncbi.nlm.nih.gov/33828302/">Cell-programmed nutrient partitioning in the tumour microenvironment.</a></h5> Reinfeld BI, Madden MZ, Wolf MM, Chytil A, Bader JE, Patterson AR, Sugiura A, Cohen AS, Ali A, <b>Do BT</b>, Muir A, Lewis CA, Hongo RA, Young KL, Brown RE, Todd VM, Huffstater T, Abraham A, O'Neil RT, Wilson MH, Xin F, Tantawy MN, Merryman WD, Johnson RW, Williams CS, Mason EF, Mason FM, Beckermann KE, Vander Heiden MG, Manning HC, Rathmell JC, Rathmell WK.  <br>
+      Nature (2021) </div> </div> <br>
 
       <div class="row">
         <div class="col-md-3" align="center">
